--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li>
                     <div>
                         <svg class="icon" width="70" height="70">
-                            <use href="images/icons.svg#antenna"></use>
+                            <use href="/images/icons.svg#antenna"></use>
                         </svg>
                     </div>
                     <h4>Atención a los detalles</h4>
