--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
             <nav class="header-nav">
                 <ul class="menu">
                     <li class="item"><a class="link actual" href="/goit-markup-hw-04/index.html">Estudio</a></li>
-                    <li class="item"><a class="link" href="/portfolio.html">Portafolio</a></li>
+                    <li class="item"><a class="link" href="/goit-markup-hw-04/portfolio.html">Portafolio</a></li>
                     <li class="item"><a class="link" href="#">Contactos</a></li>
                 </ul>
             </nav>
             <ul class="contact-info">
                 <li><a href="mailito:info@devstudio.com">
                         <svg class="icon" width="16" height="12">
-                            <use href="/images/icons.svg#envelope"></use>
+                            <use href="images/icons.svg#envelope"></use>
                         </svg>
                         info@devstudio.com</a></li>
                 <li><a href="tel:+525552296000">
                         <svg class="icon" width="10" height="16">
-                            <use href="/images/icons.svg#mobile"></use>
+                            <use href="images/icons.svg#mobile"></use>
                         </svg>
                         +52 55 5229 6000</a></li>
             </ul>
@@ -58,7 +58,7 @@
                 <li>
                     <div>
                         <svg class="icon" width="70" height="70">
-                            <use href="/images/icons.svg#antenna"></use>
+                            <use href="images/icons.svg#antenna"></use>
                         </svg>
                     </div>
                     <h4>Atención a los detalles</h4>
@@ -201,7 +201,7 @@
                         <div class="client">
                             <a href="#">
                                 <svg class="icon" width="106" height="53">
-                                    <use href="/images/icons.svg#client1"></use>
+                                    <use href="images/icons.svg#client1"></use>
                                 </svg></a>
                         </div>
                     </li>
@@ -209,7 +209,7 @@
                         <div class="client">
                             <a href="#">
                                 <svg class="icon" width="106" height="53">
-                                    <use href="/images/icons.svg#client2"></use>
+                                    <use href="images/icons.svg#client2"></use>
                                 </svg>
                             </a>
                         </div>
@@ -218,7 +218,7 @@
                         <div class="client">
                             <a href="#">
                                 <svg class="icon" width="106" height="53">
-                                    <use href="/images/icons.svg#client3"></use>
+                                    <use href="images/icons.svg#client3"></use>
                                 </svg>
                             </a>
                         </div>
@@ -227,7 +227,7 @@
                         <div class="client">
                             <a href="#">
                                 <svg class="icon" width="106" height="53">
-                                    <use href="/images/icons.svg#client4"></use>
+                                    <use href="images/icons.svg#client4"></use>
                                 </svg>
                             </a>
                         </div>
@@ -236,7 +236,7 @@
                         <div class="client">
                             <a href="#">
                                 <svg class="icon" width="106" height="53">
-                                    <use href="/images/icons.svg#client5"></use>
+                                    <use href="images/icons.svg#client5"></use>
                                 </svg>
                             </a>
                         </div>
@@ -245,7 +245,7 @@
                         <div class="client">
                             <a href="#">
                                 <svg class="icon" width="106" height="53">
-                                    <use href="/images/icons.svg#client6"></use>
+                                    <use href="images/icons.svg#client6"></use>
                                 </svg>
                             </a>
                         </div>
