--- a/portfolio.html
+++ b/portfolio.html
@@ -26,19 +26,19 @@
             <nav class="header-nav">
                 <ul class="menu">
                     <li class="item"><a class="link actual" href="/goit-markup-hw-04/index.html">Estudio</a></li>
-                    <li class="item"><a class="link" href="/portfolio.html">Portafolio</a></li>
+                    <li class="item"><a class="link" href="/goit-markup-hw-04/portfolio.html">Portafolio</a></li>
                     <li class="item"><a class="link" href="#">Contactos</a></li>
                 </ul>
             </nav>
             <ul class="contact-info">
                 <li><a href="mailito:info@devstudio.com">
                         <svg class="icon" width="16" height="12">
-                            <use href="/images/icons.svg#envelope"></use>
+                            <use href="images/icons.svg#envelope"></use>
                         </svg>
                         info@devstudio.com</a></li>
                 <li><a href="tel:+525552296000">
                         <svg class="icon" width="10" height="16">
-                            <use href="/images/icons.svg#mobile"></use>
+                            <use href="images/icons.svg#mobile"></use>
                         </svg>
                         +52 55 5229 6000</a></li>
             </ul>
