--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <!-- Modern Normalize -->
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="css\modern-normalize.css">
     <!-- Icomoon -->
     <link rel="stylesheet" href="css\icomoon\style.css">
 </head>
